--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ repositories {
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    compile group: 'io.netty', name: 'netty-all', version: '4.1.20.Final'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
